@@ -1,19 +1,22 @@
 package edu.yu.einstein.wasp.charts.highchartsjs;
 
 import java.awt.Color;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.HashSet;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Set;
 
-import org.json.JSONException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import edu.yu.einstein.wasp.charts.DataSeries;
 import edu.yu.einstein.wasp.charts.WaspChart2D;
 import edu.yu.einstein.wasp.charts.WebChartsBase;
+import edu.yu.einstein.wasp.exception.ChartException;
+import edu.yu.einstein.wasp.service.MessageService;
+import edu.yu.einstein.wasp.viewpanel.WebContent;
 
 /**
  * Base Class for producing HighChartsJs charts (www.highcharts.com)
@@ -28,22 +31,17 @@ public abstract class HighChartsJsBase extends WebChartsBase{
 	
 	private static String Y_AXIS_NAME = "yAxis";
 	
-	private static final String HIGHCHART_DIV_PREFIX = "highchart";
+	protected static final String HIGHCHART_DIV_PREFIX = "highchart";
 	
 	public enum ChartType{
 		AREA, AREASPLINE, BAR, COLUMN, LINE, PIE, SCATTER, SPLINE, BOXPLOT, NONE;
 	}
 	
-	public static Set<URL> getScriptDependencies() {
-		Set<URL> dependencies =  new HashSet<URL>();
-		try {
-			dependencies.add(new URL("http://code.highcharts.com/highcharts.js"));
-			dependencies.add(new URL("http://code.highcharts.com/highcharts-more.js"));
-			dependencies.add(new URL("http://code.highcharts.com/modules/exporting.js"));
-		} catch (MalformedURLException e) {
-			logger.warn(e.getLocalizedMessage());
-		}
-		
+	public static Set<URI> getScriptDependencies() throws URISyntaxException {
+		Set<URI> dependencies =  new LinkedHashSet<URI>(); // load order is important
+		dependencies.add(new URI("http://code.highcharts.com/highcharts.js"));
+		dependencies.add(new URI("http://code.highcharts.com/highcharts-more.js"));
+		dependencies.add(new URI("http://code.highcharts.com/modules/exporting.js"));
 		return dependencies;
 	}
 	
@@ -53,8 +51,8 @@ public abstract class HighChartsJsBase extends WebChartsBase{
 	 * @param title
 	 * @return
 	 */
-	public static String getContainerStartCode(ChartType chartType, String title){
-		return getContainerStartCode(chartType, title, false, null);
+	public static String getContainerStartCode(ChartType chartType, String containerId, String title){
+		return getHCScriptStartCode(chartType, containerId, title, false);
 	}
 	
 	/**
@@ -65,20 +63,15 @@ public abstract class HighChartsJsBase extends WebChartsBase{
 	 * @param description
 	 * @return
 	 */
-	public static String getContainerStartCode(ChartType chartType, String title, boolean displayLegend, String description){
+	public static String getHCScriptStartCode(ChartType chartType, String containerId, String title, boolean displayLegend){
 		StringBuilder sb = new StringBuilder();
-		StringBuilder id = new StringBuilder();
-		
-		sb.append(getSimpleContainerCode(HIGHCHART_DIV_PREFIX, "", description, id)); // value of id get set in here
-		if (!chartType.equals(ChartType.NONE)){
-			sb.append("<script>\n$(function () {\n$('#" + HIGHCHART_DIV_PREFIX +  CONTENTS_DIV_SUFFIX + id + "').highcharts({\n");
-			sb.append("chart: { type: '" + chartType.toString().toLowerCase() +"' },\n");
-			if (title != null && !title.isEmpty())
-				sb.append("title: { text: '" + title + "' },\n");
-			//if (subTitle != null && !subTitle.isEmpty())
-			//	sb.append("subtitle: { text: '" + subTitle + "' },\n");
-			sb.append("legend: { enabled: " + displayLegend + " },\n");
-		}
+		sb.append("$(function () {\n$('#" + HIGHCHART_DIV_PREFIX +  CONTENTS_DIV_SUFFIX + containerId + "').highcharts({\n");
+		sb.append("chart: { type: '" + chartType.toString().toLowerCase() +"' },\n");
+		if (title != null && !title.isEmpty())
+			sb.append("title: { text: '" + title + "' },\n");
+		//if (subTitle != null && !subTitle.isEmpty())
+		//	sb.append("subtitle: { text: '" + subTitle + "' },\n");
+		sb.append("legend: { enabled: " + displayLegend + " },\n");
 		return sb.toString();
 	}
 	
@@ -173,24 +166,40 @@ public abstract class HighChartsJsBase extends WebChartsBase{
 		return sb.toString();
 	}
 	
-		
-	public static String getBasicSeriesCode(final BasicHighChartsSeries series) throws JSONException{
-		Set<BasicHighChartsSeries> seriesSet = new HashSet<BasicHighChartsSeries>();
-		seriesSet.add(series);
-		return getBasicSeriesCode(seriesSet);
+	public static String getBasicSeriesCode(final BasicHighChartsSeries series) throws ChartException{
+		return getBasicSeriesCode(series, null);
 	}
 	
-	public static String getBasicSeriesCode(final Set<BasicHighChartsSeries> seriesSet) throws JSONException{
-		StringBuilder sb = new StringBuilder();
-		sb.append("series: [");
-		int seriesCount = 0;
-		for (BasicHighChartsSeries series : seriesSet){
-			if (seriesCount++ > 0)
-				sb.append(",");
-			sb.append(series.getInnerHtml());
+		
+	public static String getBasicSeriesCode(final BasicHighChartsSeries series, MessageService messageService) throws ChartException{
+		try{
+			Set<BasicHighChartsSeries> seriesSet = new HashSet<BasicHighChartsSeries>();
+			seriesSet.add(series);
+			return getBasicSeriesCode(seriesSet, messageService);
+		} catch(Exception e){
+			throw new ChartException("Unexpected error caught rendering chart", e);
 		}
-		sb.append("]\n");	
-		return sb.toString();
+	}
+	
+	public static String getBasicSeriesCode(final Set<BasicHighChartsSeries> seriesSet) throws ChartException{
+		return getBasicSeriesCode(seriesSet, null);
+	}
+	
+	public static String getBasicSeriesCode(final Set<BasicHighChartsSeries> seriesSet, MessageService messageService) throws ChartException{
+		try{
+			StringBuilder sb = new StringBuilder();
+			sb.append("series: [");
+			int seriesCount = 0;
+			for (BasicHighChartsSeries series : seriesSet){
+				if (seriesCount++ > 0)
+					sb.append(",");
+				sb.append(series.getInnerHtml(messageService));
+			}
+			sb.append("]\n");	
+			return sb.toString();
+		} catch(Exception e){
+			throw new ChartException("Unexpected error caught rendering chart", e);
+		}
 	}
 	
 	
@@ -198,20 +207,31 @@ public abstract class HighChartsJsBase extends WebChartsBase{
 	 * Terminates a chart. Do not call this methods unless getContainerStartCode() has been called first
 	 * @return
 	 */
-	public static String getContainerEndCode(){
-		return "\n});\n});\n</script>";
+	public static String getHCScriptEndCode(){
+		return "\n});});";
 	}
 	
 	/**
 	 * Get a basic spline chart.
 	 * @param chart
 	 * @return
-	 * @throws JSONException
+	 * @throws ChartException 
 	 */
-	public static String getBasicSpline(final WaspChart2D chart) throws JSONException{
-		return getBasicSpline(chart, null, null, null, null, null, null);
+	public static WebContent getBasicSpline(final WaspChart2D chart) throws ChartException {
+		return getBasicSpline(chart, null, null, null, null, null, null, null);
 	}
-
+	
+	/**
+	 * Get a basic spline chart. Providing a MessageService instance enables internationalization of
+	 * title and description (assumes chart title and description parameter values are localization property keys).
+	 * @param chart
+	 * @param messageService
+	 * @return
+	 * @throws ChartException 
+	 */
+	public static WebContent getBasicSpline(final WaspChart2D chart, MessageService messageService) throws ChartException {
+		return getBasicSpline(chart, null, null, null, null, null, null, messageService);
+	}
 	
 	/**
 	 * Get a basic spline chart. Except for chart, which must be provided, all other parameter values may be null
@@ -224,17 +244,67 @@ public abstract class HighChartsJsBase extends WebChartsBase{
 	 * @param yMin
 	 * @param yMax
 	 * @return
-	 * @throws JSONException
+	 * @throws ChartException 
 	 */
-	public static String getBasicSpline(final WaspChart2D chart, Integer xTickInterval, Integer yTickInterval, Integer xMin, Integer xMax, Integer yMin, Integer yMax) throws JSONException{
-		DataSeries ds = chart.getDataSeries().get(0);
-		StringBuilder sb = new StringBuilder();
-		sb.append(getContainerStartCode(ChartType.SPLINE, chart.getTitle(), false, chart.getDescription()));
-		sb.append(getBasicXAxisCode(chart.getxAxisLabel(), ds.getRowLabels(), xTickInterval));
-		sb.append(getBasicYAxisCode(chart.getyAxisLabel(), yMin, yMax));
-		sb.append(getBasicSeriesCode(new BasicHighChartsSeries(ds, false, false, Color.RED)));
-		sb.append(getContainerEndCode());
-		return sb.toString();
+	public static WebContent getBasicSpline(final WaspChart2D chart, Integer xTickInterval, Integer yTickInterval, Integer xMin, Integer xMax, Integer yMin, Integer yMax) throws ChartException{
+		return getBasicSpline(chart, xTickInterval, yTickInterval, xMin, xMax, yMin, yMax, null);
+	}
+	
+	/**
+	 * Get a basic spline chart. Except for chart, which must be provided, all other parameter values may be null
+	 * in which case HighCharts default values will be used.
+	 * Providing a MessageService instance enables internationalization of
+	 * title and description (assumes chart title and description parameter values are localization property keys).
+	 * @param chart
+	 * @param xTickInterval
+	 * @param yTickInterval
+	 * @param xMin
+	 * @param xMax
+	 * @param yMin
+	 * @param yMax
+	 * @param messageService
+	 * @return
+	 * @throws ChartException 
+	 */
+	public static WebContent getBasicSpline(final WaspChart2D chart, Integer xTickInterval, Integer yTickInterval, Integer xMin, Integer xMax, Integer yMin, Integer yMax, MessageService messageService) throws ChartException{
+		try{
+			DataSeries ds = chart.getDataSeries().get(0);
+			WebContent content = new WebContent();
+			String containerId = getUniqueContainerId();;
+			String description;
+			String title;
+			String xAxisLabel;
+			String yAxisLabel;
+			List<String> rowLabels;
+			if (messageService == null){
+				description = chart.getDescription();
+				title = chart.getTitle();
+				xAxisLabel = chart.getxAxisLabel();
+				yAxisLabel = chart.getyAxisLabel();
+				rowLabels = ds.getRowLabels();
+			} else {
+				description = chart.getLocalizedDescription(messageService);
+				title = chart.getLocalizedTitle(messageService);
+				xAxisLabel = chart.getLocalizedXAxisLabel(messageService);
+				yAxisLabel = chart.getLocalizedYAxisLabel(messageService);
+				rowLabels = ds.getLocalizedRowLabels(messageService);
+			}
+			content.setHtmlCode(getSimpleContainerCode(HIGHCHART_DIV_PREFIX, "", description, containerId));
+			
+			StringBuilder sb = new StringBuilder();
+			
+			
+			sb.append(getHCScriptStartCode(ChartType.SPLINE, containerId, title, false));
+			sb.append(getBasicXAxisCode(xAxisLabel, rowLabels, xTickInterval));
+			sb.append(getBasicYAxisCode(yAxisLabel, yMin, yMax));
+			sb.append(getBasicSeriesCode(new BasicHighChartsSeries(ds, false, false, Color.RED), messageService));
+			sb.append(getHCScriptEndCode());
+			content.setScriptCode(sb.toString());
+			content.setScriptDependencies(getScriptDependencies());
+			return content;
+		} catch(Exception e){
+			throw new ChartException("Unexpected error caught rendering chart", e);
+		}
 	}
 	
 	
